force-app/main/default/objects/User/fields/AcctSeed__Payable_Days_Due__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Payable_Days_Due__c</fullName>
    <description>This is used to calculate the Payable’s Due Date.</description>
    <inlineHelpText>This is used to calculate the Payable’s Due Date.</inlineHelpText>
    <label>Payable Days Due</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>