force-app/main/default/objects/User/fields/Dropbox_for_SF__Dropbox_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Dropbox_for_SF__Dropbox_User_Id__c</fullName>
    <label>Dropbox User Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>