force-app/main/default/objects/User/fields/inov8__Is_PMT_User_consider_for_Availability__c.field-meta.xml
<CustomField>
    <fullName>inov8__Is_PMT_User_consider_for_Availability__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies user as PMT user consider for Resource Availability</description>
    <label>Is PMT User consider for Availability</label>
    <type>Checkbox</type>
</CustomField>